added radio buttons to toggle day of week to inspect. made graph respond to slider.

--- a/preproc.ipynb
+++ b/preproc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 149,
    "metadata": {
     "collapsed": false
    },
@@ -394,13 +394,36 @@
     "## ------------------------ ##\n",
     "## Define LAYERS to analyse ##\n",
     "## ------------------------ ##\n",
-    "layers = month_sho_5mins[576:864]\n",
+    "dow = 6\n",
+    "layers = month_sho_5mins[288*(dow+2):288*(dow+3)]\n",
     "\n",
     "## ------------------- ##\n",
-    "## Compute communities ##\n",
+    "## Compute COMMUNITIES ##\n",
     "## ------------------- ##\n",
     "communities, layer_communities = community_detection_multiplex(layers, halflife=300)\n",
     "similarities = compute_similarity_matrix(communities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt.fromtimestamp(layers[0]['timestamp'].values[0]).weekday()"
    ]
   },
   {
@@ -412,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 151,
    "metadata": {
     "collapsed": true
    },
@@ -422,12 +445,12 @@
     "actual_width = len(set([item for sublist in communities.values() for item in sublist])) #number of nodes\n",
     "actual_height = len(layers)\n",
     "\n",
-    "min_group_size = 1"
+    "min_group_size = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 152,
    "metadata": {
     "collapsed": false
    },
@@ -485,7 +508,7 @@
     "# Initiate data structure\n",
     "ds = {\n",
     "    'meta': {'w': width, 'h': height},\n",
-    "    'time': {'t0': t0, \n",
+    "    'time': {'t0': t0,\n",
     "             'tt': tt,\n",
     "             'dt': d_t,\n",
     "             'ticks': {'label_ticks': label_ticks,\n",
@@ -625,6 +648,17 @@
     "        \n",
     "    prev_layer_blocks = this_layer_blocks\n",
     "    \n",
+    "# Add colors\n",
+    "# Deprecated: is still needed on script. Misleading that it is not namechanged or something.\n",
+    "com_cols = {}\n",
+    "for com in ds['coms'].keys():\n",
+    "    r = np.average([mmh3.hash(n)%256 for n in communities[int(com[1:])]])\n",
+    "    g = np.average([mmh3.hash(n)%255 for n in communities[int(com[1:])]])\n",
+    "    b = np.average([mmh3.hash(n)%254 for n in communities[int(com[1:])]])\n",
+    "\n",
+    "    #ds['coms'][com]['color'] = 'rgb(%d,%d,%d)' % (r,g,b)\n",
+    "    com_cols[com] = 'rgb(%d,%d,%d)' % (r,g,b)\n",
+    "    \n",
     "# Add networks\n",
     "def layer_networks(filename, layer_communities):\n",
     "    \n",
@@ -641,20 +675,22 @@
     "    \n",
     "    e_li = [e_str.split() for e_str in rawstring_edges.split('\\n')[1:]] # [['1', '347', '1', '348', '1'],...]\n",
     "    \n",
-    "    # Add edges\n",
+    "    # Add edges, one at a time\n",
     "    for e in e_li:\n",
     "        layer, source, target, value = int(e[0]), int(e[1]), int(e[3]), int(e[4])\n",
-    "        group_source = [g for g,n in layer_communities[layer].items() if nodes_map[source] in n][0]\n",
-    "        group_target = [g for g,n in layer_communities[layer].items() if nodes_map[target] in n][0]\n",
-    "        if group_source == group_target:\n",
-    "            divisor = 10.0\n",
-    "        else:\n",
-    "            divisor = 10.0\n",
+    "        try:\n",
+    "            group_source = [g for g,n in layer_communities[layer].items() if nodes_map[source] in n][0]\n",
+    "            group_target = [g for g,n in layer_communities[layer].items() if nodes_map[target] in n][0]\n",
+    "        except IndexError:\n",
+    "            # This occurs if the source/target has no group, WHICH IT SHOULD. Why this happend (and it\n",
+    "            # very rarely does) I don't know, maybe it's something with Infomap.\n",
+    "            print \"node\", source, \"or\", target, \"has no group in layer\", layer, \"... skipping link!\"\n",
+    "            continue\n",
     "            \n",
     "        if \"c\"+str(group_source) not in com_cols or \"c\"+str(group_target) not in com_cols:\n",
     "            continue\n",
     "    \n",
-    "        edge = {'source': source, 'target': target, 'value': value/divisor}\n",
+    "        edge = {'source': source, 'target': target, 'value': value/10.0}\n",
     "        try:\n",
     "            ln['data'][layer]['links'].append(edge)\n",
     "        except KeyError:\n",
@@ -708,18 +744,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 153,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "## ----------------------------- ##\n",
-    "## Store D3-ready data structure ##\n",
-    "## ----------------------------- ##\n",
+    "## -------------------------------- ##\n",
+    "## Store D3-loadable data structure ##\n",
+    "## -------------------------------- ##\n",
     "\n",
-    "with open('Visualisation/data/dataset.json', 'w') as outfile:\n",
+    "with open('Visualisation/data/datasetSun.json', 'w') as outfile:\n",
     "    json.dump(ds,outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-141-6f70a0cbdc74>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "[][0]"
    ]
   },
   {
