--- a/preproc.ipynb
+++ b/preproc.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -355,6 +355,22 @@
     "                X['c'+str(i+1)] = {'c'+str(j+1): {'sim': sim, 'count': count}}\n",
     "\n",
     "    return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "## --------------------- ##\n",
+    "## Create binned network ##\n",
+    "## --------------------- ##\n",
+    "\n",
+    "#df_short, df_all = load_raw_month_data()\n",
+    "create_loadable_bins()"
    ]
   },
   {
