streamlined code a bit for d-dawg

--- a/preproc.ipynb
+++ b/preproc.ipynb
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -369,7 +369,7 @@
     "## Create binned network ##\n",
     "## --------------------- ##\n",
     "\n",
-    "#df_short, df_all = load_raw_month_data()\n",
+    "df_short, df_all = load_raw_month_data()\n",
     "create_loadable_bins()"
    ]
   },
